test/test-files/analyzer/generics/error-generic-function-not-found/exception.out
Semantic error in : ./test-files/analyzer/generics/error-generic-function-not-found/source.spice:7:5:
Referenced undefined function: Function/Procedure 's1.Vector.setData(double)' could not be found

v.setData(1.5);
^^^^^^^^^^^^^^